Made Domain and Validators for Inventory, Pharmacy, Purchase, Treatment entity